Fix scrollbar behavior

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,6 +16,6 @@
   height: 100%;
 }
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
     display: none;
 }
